--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta name="google-adsense-account" content="ca-pub-8733598973486633">
     <link rel='stylesheet' type='text/css' href='styles.css'>
     <title>Tower Defense</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
