--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel='stylesheet' type='text/css' href='styles.css'>
     <title>Tower Defense</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8733598973486633"
+     crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="assets/spritesheetMappings-towers.js"></script>
     <script type="text/javascript" src="assets/spritesheetMappings-roads.js"></script>
